--- a/connect.html
+++ b/connect.html
@@ -15,6 +15,7 @@
     <![endif]-->
     <script src="javascript/jquery.js"></script>
     <script src="javascript/jquery.easings.min.js"></script>
+    <script src="javascript/main.js"></script>
 </head>
 
 <body class="body" class="page-index">
