--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="javascript/html5shiv.js"></script>
     <![endif]-->
     <script src="javascript/jquery.js"></script>
-    <script src="javascript/jquery.easings.min.js"></script>
+    <script src="javascript/jquery.easings.min.js"></script><script src="javascript/main.js"></script>
 </head>
 
 <body class="body" class="page-index">
@@ -105,7 +105,7 @@
                     <div class="list1">
                         <div class="qr-code-warp">
                             <div class="qr-code">
-                                <img src="upload/image/1219_20_16_900_saoyisaokaihu.png" />
+                                <img src="" />
                             </div>
                             <div class="left-qr">
                                 扫我扫我
