--- a/weather.html
+++ b/weather.html
@@ -16,7 +16,7 @@
     <![endif]-->
     <script src="javascript/jquery.js"></script>
     <script src="javascript/jquery.flexslider-min.js"></script>
-    <script src="javascript/jquery.easings.min.js"></script>
+    <script src="javascript/jquery.easings.min.js"></script><script src="javascript/main.js"></script>
 </head>
 
 <body class="body" class="page-index">
