--- a/solution.html
+++ b/solution.html
@@ -14,7 +14,7 @@
     <script src="javascript/html5shiv.js"></script>
     <![endif]-->
     <script src="javascript/jquery.js"></script>
-    <script src="javascript/jquery.easings.min.js"></script>
+    <script src="javascript/jquery.easings.min.js"></script><script src="javascript/main.js"></script>
 </head>
 
 <body class="body" class="page-index">
