ADD: 添加QQ联系人

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script src="javascript/html5shiv.js"></script>
     <![endif]-->
     <script src="javascript/jquery.js"></script>
-    <script src="javascript/jquery.easings.min.js"></script><script src="javascript/main.js"></script>
+    <script src="javascript/jquery.easings.min.js"></script>
+    <script src="javascript/main.js"></script>
 </head>
 
 <body class="body" class="page-index">
@@ -114,7 +115,9 @@
                     </div>
                     <li class="list2"><a class="list" href="#">关于我们</a></li>
                     <li class="list3"><a class="list" href="#">常见问题</a></li>
-                    <li class="list4"><a class="list" href="http://wpa.b.qq.com/cgi/wpa.php?ln=2&uin=800195310&site=qq&menu=yes" target="_blank">在线咨询</a></li>
+                    <li class="list4">
+                        <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=3342908618&site=qq&menu=yes">在线咨询</a>
+                    </li>
                     <li class="list5"><a class="list" href="#">咨询/投诉建议</a></li>
                 </ul>
             </div>
